clusters/dev-k8s/prometheus-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus-system
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-prometheus-release-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus-system
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-prometheus-release-ku-prometheus
            port:
              number: 9090
